changed scrolling type to fix smooth scroll on mobile

--- a/src/Components/EntriesList/EntriesList.css
+++ b/src/Components/EntriesList/EntriesList.css
@@ -1,5 +1,6 @@
 .entry-list {
-	overflow-y: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	width: 100%;
 	height: 100%;
 }
