--- a/src/Components/WhatIsCantoTalk/WhatIsCantoTalk.css
+++ b/src/Components/WhatIsCantoTalk/WhatIsCantoTalk.css
@@ -4,7 +4,8 @@
 	padding: 10px 20px;
 	box-sizing: border-box;
 	text-align: center;
-	overflow-y: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	background: var(--cantoWhite);
 }
 
