--- a/src/Containers/SignIn/SignIn.css
+++ b/src/Containers/SignIn/SignIn.css
@@ -3,7 +3,8 @@
 	min-height: 500px;
 	padding: 20px;
 	box-sizing: border-box;
-	overflow-y: auto;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
